--- a/src/modules/footer-disclaimer/one-column/templates/template.html
+++ b/src/modules/footer-disclaimer/one-column/templates/template.html
@@ -26,7 +26,7 @@
 						
 						<p class="disclaimer margin-b-16">To Unsubscribe from future emails or customize our communications with you, manage your email preferences.</p>
 
-						<p class="disclaimer" style="float: right;">{{my.cscode}}</p>
+						<p class="disclaimer right">{{my.cscode}}</p>
 					</td>
 				</tr>
 			</table>
