--- a/src/modules/footer-disclaimer/two-column/templates/template.html
+++ b/src/modules/footer-disclaimer/two-column/templates/template.html
@@ -43,7 +43,7 @@
 							</tr>
 						</table>
 
-						<p class="disclaimer margin-t-16" style="float: right;">{{my.cscode}}</p>
+						<p class="disclaimer margin-t-16 right">{{my.cscode}}</p>
 					</td>
 				</tr>
 			</table>
