--- a/src/modules/one-column-contents/shift-right/templates/template.html
+++ b/src/modules/one-column-contents/shift-right/templates/template.html
@@ -9,7 +9,7 @@
 			<table style="width: 100%;" cellpadding="8px" cellspacing="0" role="presentation">
 				<tr class="">
 					
-					<td class="column shift-right-md">
+					<td class="column shift-right-md padded">
 						<p class="eyebrow margin-b-16"><span class="bullet">&bull;</span> <span class="label">What's Trending</span></p>
 						
 						<h2 class="margin-b-16">One chart you need to see</h2>
