--- a/src/modules/two-column-contents/full-content/templates/template.dark.html
+++ b/src/modules/two-column-contents/full-content/templates/template.dark.html
@@ -29,10 +29,10 @@
 
 						<div class="mso_list margin-b-16">
 							<ul class="g_list" style="" align="left" type="disc">
-									<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Lazard US Offshore Fund Offerings</a></li>
-									<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Lazard US Offshore Fund Offerings</a></li>
-									<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Lazard US Offshore Fund Offerings</a></li>
-									<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Lazard US Offshore Fund Offerings</a></li>
+									<li><a class="link-2" target="_blank" href="https://www.lazardassetmanagement.com">Lazard US Offshore Fund Offerings</a></li>
+									<li><a class="link-2" target="_blank" href="https://www.lazardassetmanagement.com">Lazard US Offshore Fund Offerings</a></li>
+									<li><a class="link-2" target="_blank" href="https://www.lazardassetmanagement.com">Lazard US Offshore Fund Offerings</a></li>
+									<li><a class="link-2" target="_blank" href="https://www.lazardassetmanagement.com">Lazard US Offshore Fund Offerings</a></li>
 							</ul>
 						</div>
 
@@ -96,10 +96,10 @@
 
 						<div class="mso_list margin-b-16">
 							<ul class="g_list" style="" align="left" type="disc">
-									<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Lazard US Offshore Fund Offerings</a></li>
-									<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Lazard US Offshore Fund Offerings</a></li>
-									<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Lazard US Offshore Fund Offerings</a></li>
-									<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Lazard US Offshore Fund Offerings</a></li>
+									<li><a class="link-2" target="_blank" href="https://www.lazardassetmanagement.com">Lazard US Offshore Fund Offerings</a></li>
+									<li><a class="link-2" target="_blank" href="https://www.lazardassetmanagement.com">Lazard US Offshore Fund Offerings</a></li>
+									<li><a class="link-2" target="_blank" href="https://www.lazardassetmanagement.com">Lazard US Offshore Fund Offerings</a></li>
+									<li><a class="link-2" target="_blank" href="https://www.lazardassetmanagement.com">Lazard US Offshore Fund Offerings</a></li>
 							</ul>
 						</div>
 
