--- a/src/modules/two-column-contents/title-left/templates/template.dark.onyx.html
+++ b/src/modules/two-column-contents/title-left/templates/template.dark.onyx.html
@@ -27,10 +27,10 @@
 						
 						<div class="mso_list margin-b-16">
 							<ul class="g_list" style="" align="left" type="disc">
-									<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Outlook on Emerging Markets</a></li>
-									<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Outlook on Europe</a></li>
-									<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Outlook on Japan</a></li>
-									<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Outlook on the United Kingdom</a></li>
+									<li><a class="link-2" target="_blank" href="https://www.lazardassetmanagement.com">Outlook on Emerging Markets</a></li>
+									<li><a class="link-2" target="_blank" href="https://www.lazardassetmanagement.com">Outlook on Europe</a></li>
+									<li><a class="link-2" target="_blank" href="https://www.lazardassetmanagement.com">Outlook on Japan</a></li>
+									<li><a class="link-2" target="_blank" href="https://www.lazardassetmanagement.com">Outlook on the United Kingdom</a></li>
 							</ul>
 						</div>
 						
@@ -49,7 +49,7 @@
 							Variant: Pill, Secondary, Large
 						-->
 						@@include("components/buttons/pills/templates/template.msoDark.secondary.onyx.html", {
-							label: "Sapphire Secondary Button",
+							label: "Secondary Button",
 							width: "192px"
 						})
 					</td>
