--- a/src/templates/master.html
+++ b/src/templates/master.html
@@ -111,6 +111,60 @@
 
 			@@include( "modules/footer-disclaimer/one-column/one-column-footer-disclaimer.html" )
 			@@include( "modules/footer-disclaimer/two-column/two-column-footer-disclaimer.html" )
+
+			<tr>
+				<td align="center" id="email-banner_one-column">
+					<h4 style="margin: 16px;">Privacy policy / Unsubscribe & my.code</h4>
+				</td>
+			</tr>
+			
+			<tr>
+				<td align="center">
+					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module dark onyx">
+						<tr>
+							<td class="frame"></td>
+							<td class="content">
+								<p class="disclaimer margin-b-16"><a href=https://www.lazardassetmanagement.com/entry?relTargetURL=privacy-policy.html&source=mkto&medium=email&campaign={{my.campaign}}&cscode={{my.cscode}}&sfdcid={{lead.SFDC Id}}&content={{my.content}} class="disclaimer" target="_blank">Privacy Policy</a></p>
+								<p class="disclaimer margin-t-16 right">{{my.cscode}}</p>
+							</td>
+							<td class="frame"></td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+			
+			<tr>
+				<td align="center">
+					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module dark onyx">
+						<tr>
+							<td class="frame"></td>
+							<td class="content">
+								<p class="disclaimer margin-b-16">
+									<a href=https://www.lazardassetmanagement.com/entry?relTargetURL=privacy-policy.html&source=mkto&medium=email&campaign={{my.campaign}}&cscode={{my.cscode}}&sfdcid={{lead.SFDC Id}}&content={{my.content}} class="disclaimer" style="margin-right: 4px;" target="_blank">Privacy Policy</a>
+									|
+									<a href=https://www.lazardassetmanagement.com/entry?relTargetURL=privacy-policy.html&source=mkto&medium=email&campaign={{my.campaign}}&cscode={{my.cscode}}&sfdcid={{lead.SFDC Id}}&content={{my.content}} class="disclaimer" style="margin-left: 4px;" target="_blank">Unsubscribe</a>
+								</p>
+								<p class="disclaimer margin-t-16 right">{{my.cscode}}</p>
+							</td>
+							<td class="frame"></td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+
+			<tr>
+				<td align="center">
+					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module dark onyx">
+						<tr>
+							<td class="frame"></td>
+							<td class="content">
+								<p class="disclaimer margin-t-16 right">{{my.cscode}}</p>
+							</td>
+							<td class="frame"></td>
+						</tr>
+					</table>
+				</td>
+			</tr>
 		</table>
 	</body>
 </html>
