--- a/src/components/buttons/open-in-new/template.html
+++ b/src/components/buttons/open-in-new/template.html
@@ -18,12 +18,12 @@
       <!--<![endif]-->
 		</td>
 		<td>
-			<a href="#" class="link-2">@@label</a>
-		</td>
-	</tr>
-	<tr style="vertical-align: middle;">
-		<td>
+			<a href="#" class="link-2" style="margin: 0;">@@label</a>
 			<p class="disclaimer">@@disclaimer</p>
 		</td>
 	</tr>
+	<!-- <tr style="vertical-align: middle;">
+		<td>
+		</td>
+	</tr> -->
 </table>
