--- a/src/components/team-bios/template.html
+++ b/src/components/team-bios/template.html
@@ -1,6 +1,7 @@
 <table role="presentation" cellpadding="0" cellspacing="0" class="@@classes">
 	<tr>
 		<td rowspan="2" style="vertical-align: middle;" class="padding-r-16">
+			<!-- <img src="@@imgBase/@@imgSrc" alt="Team member bio thumbnail" width="54px" height="54px"> -->
 			<img src="https://placehold.co/54x54" alt="Team member bio thumbnail" width="54px" height="54px">
 		</td>
 		<td style="vertical-align: bottom;">
