--- a/src/modules/email-banner/two-column/templates/template.html
+++ b/src/modules/email-banner/two-column/templates/template.html
@@ -19,7 +19,7 @@
 					</td>
 					<td class="column">
 						<!-- <img src="@@imgBase/@@imgSrc" alt="Feature image"> -->
-						<img src="https://placehold.co/264x148" alt="Feature image" width="264px">
+						<img src="https://placehold.co/264x148" alt="Feature image" class="responsive-img">
 					</td>
 				</tr>
 			</table>
