--- a/src/modules/two-column-contents/image-right/templates/template.dark.onyx.html
+++ b/src/modules/two-column-contents/image-right/templates/template.dark.onyx.html
@@ -13,11 +13,11 @@
 						
 						<h3 class="subheadline margin-b-16">Tuesday, October 31, 1:00PM eT</h3>
 						
-						<p class="paragraph-2 margin-b-16">Rising US interest rates--and soaring Treasury yields--have done their part to rattle global economics. As the environment settles, we expect growth differentials to shift, creating a more positive backdrop for emerging markets debt and interesting investment opportunities for the asset class across the capital structure.Rising US interest rates--and soaring Treasury yields--have done their part to rattle global economics. As the environment settles, we expect growth differentials to shift, creating a more positive backdrop for emerging markets debt and interesting investment opportunities for the asset class across the capital structure.</p>
+						<p class="paragraph-2 margin-b-16">Rising US interest rates--and soaring Treasury yields--have done their part to rattle global economics. As the environment settles, we expect growth differentials to shift, creating a more positive backdrop for emerging markets debt and interesting investment opportunities for the asset class across the capital structure.</p>
 						
 						<div class="mso_list margin-b-16">
 							<ul class="g_list" style="" align="left" type="disc">
-									<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Lazard US Offshore Fund Offerings</a></li>
+									<li><a class="link-2" target="_blank" href="https://www.lazardassetmanagement.com">Lazard US Offshore Fund Offerings</a></li>
 							</ul>
 						</div>
 						
