--- a/src/templates/test.html
+++ b/src/templates/test.html
@@ -13,36 +13,18 @@
 
 			<tr>
 				<td align="center">
-					@@include( "modules/two-column-contents/image-right/templates/template.onyx.html", {
-						variant: "sage",
-						imgSrc: "LAM_ContentImage_Lecture.png"
+					@@include( "modules/email-banner/two-column/templates/template.html", {
+						variant: "clarity",
+						imgSrc: "LAM_Feature_Lake.png"
 					} )
 				</td>
 			</tr>
 			
 			<tr>
 				<td align="center">
-					@@include( "modules/two-column-contents/image-right/templates/template.html", {
-						variant: "clarity",
-						imgSrc: "LAM_ContentImage_Lecture.png"
-					} )
-				</td>
-			</tr>
-
-			<tr>
-				<td align="center">
-					@@include( "modules/two-column-contents/teams/templates/template.html", {
-						variant: "clarity",
-						imgSrc: "LAM_Bio_1.png"
-					} )
-				</td>
-			</tr>
-			
-			<tr>
-				<td align="center">
-					@@include( "modules/two-column-contents/teams/templates/template.html", {
-						variant: "sapphire dark",
-						imgSrc: "LAM_Bio_1.png"
+					@@include( "modules/email-banner/two-column/templates/template.dark.html", {
+						variant: "sapphire",
+						imgSrc: "LAM_Feature_Lake.png"
 					} )
 				</td>
 			</tr>
