--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -68,7 +68,7 @@ ul {
 li {
 	font-family: "Helvetica Neue LT Std", Helvetica, sans-serif;
 	font-size: 12;
-	line-height: 19px;
+	line-height: 1.2;
 	margin-bottom: 8px;
 	padding-left: 0px;
 	margin-left: 4px;
@@ -144,17 +144,17 @@ h1, h2, h3, h4 {
 
 h1 {
 	font-size: 40px;
-	line-height: 40px;
+	line-height: 1.2;
 }
 
 h2 {
 	font-size: 32px;
-	line-height: 38px;
+	line-height: 1.2;
 }
 
 h3 {
 	font-size: 24px;
-	line-height: 29px;
+	line-height: 1.2;
 	font-style: normal;
 }
 
@@ -163,7 +163,7 @@ h4 {
 	font-size: 12px;
 	font-weight: normal;
 	font-style: normal;
-	line-height: 12px;
+	line-height: 1.2;
 }
 
 h1.sans, h2.sans, h3.sans, h4.sans {
@@ -173,17 +173,17 @@ h1.sans, h2.sans, h3.sans, h4.sans {
 
 h1.sans {
 	font-size: 40px;
-	line-height: 40px;
+	line-height: 1.2;
 }
 
 h2.sans {
 	font-size: 32px;
-	line-height: 38px;
+	line-height: 1.2;
 }
 
 h3.sans {
 	font-size: 24px;
-	line-height: 29px;
+	line-height: 1.2;
 	font-style: normal;
 }
 
@@ -192,25 +192,25 @@ h4.sans {
 	font-size: 16px;
 	font-weight: bold;
 	font-style: normal;
-	line-height: 19px;
+	line-height: 1.2;
 }
 
 .subheadline {
 	font-family: "Helvetica Neue LT Std", Helvetica, sans-serif;
 	font-weight: bold;
 	font-size: 24px;
-	line-height: 22px;
+	line-height: 1.2;
 }
 
 h2.subheadline {
 	font-size: 16px;
 	font-weight: normal;
-	line-height: 19px;
+	line-height: 1.2;
 }
 
 h3.subheadline {
 	font-size: 12px;
-	line-height: 14px;
+	line-height: 1.2;
 	font-weight: bold;
 }
 
@@ -219,18 +219,18 @@ p, .paragraph {
 	font-family: "Helvetica Neue LT Std", Helvetica, sans-serif;
 	font-size: 14px;
 	font-weight: normal;
-	line-height: 17px;
+	line-height: 1.2;
 	margin: 0;
 }
 
 .paragraph-2 {
 	font-size: 12px;
-	line-height: 17px;
+	line-height: 1.2;
 }
 
 .paragraph-3 {
 	font-size: 10px;
-	line-height: 12px;
+	line-height: 1.2;
 }
 
 a {
@@ -238,7 +238,7 @@ a {
 	font-size: 16px;
 	font-weight: normal;
 	color: var(--sapphire);
-	line-height: 19px;
+	line-height: 1.2;
 	text-decoration: underline;
 }
 
