Updated example templates with new wide color bg modules

--- a/src/templates/lazard-connect.html
+++ b/src/templates/lazard-connect.html
@@ -43,13 +43,13 @@
 			<!-- END Email Banner, One Column -->
 
 			<!-- Email Heading, One Column -->
-			<tr>
+			<tr class="bg parchment">
 				<td align="center">
 					<!--
 						Module: Email Heading
 						Variant: parchment, sapphire buttons
 					-->
-					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module cta-banner parchment">
+					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module cta-banner">
 						<tr>
 							<td class="frame"></td>
 							<td class="content h-flush">
@@ -94,13 +94,13 @@
 			@@include( "components/spacers/templates/template.html", {
 				variant: "parchment"
 			} )
-			<tr>
+			<tr class="bg parchment">
 				<td align="center">
 					<!--
 						Module: Three Column Content, Contents
 						Variant: parchment, sapphire buttons
 					-->
-					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module parchment">
+					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module">
 						<tr>
 							<td class="frame"></td>
 							<td class="content h-flush">
@@ -229,13 +229,13 @@
 			@@include( "components/spacers/templates/template.html", {
 				variant: "sage"
 			} )
-			<tr>
+			<tr class="bg sage">
 				<td align="center">
 					<!--
 						Module: Three Column Content, Contents
 						Variant: parchment, sapphire buttons
 					-->
-					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module sage">
+					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module">
 						<tr>
 							<td class="frame"></td>
 							<td class="content h-flush">
@@ -377,13 +377,13 @@
 			@@include( "components/spacers/templates/template.html", {
 				variant: "parchment"
 			} )
-			<tr>
+			<tr class="bg parchment">
 				<td align="center">
 					<!--
 						Module: One Column Contents
 						Variant: parchment, sapphire buttons
 					-->
-					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module parchment">
+					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module">
 						<tr>
 							<td class="frame"></td>
 							<td class="content">
@@ -417,13 +417,13 @@
 			@@include( "components/spacers/templates/template.html", {
 				variant: "sage"
 			} )
-			<tr>
+			<tr class="bg sage">
 				<td align="center">
 					<!--
 						Module: CTA Banner, Two Column
 						Variant: sage, onyx buttons
 					-->
-					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module cta-banner sage">
+					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module cta-banner">
 						<tr>
 							<td class="frame"></td>
 							<td class="content h-flush">
