--- a/src/templates/em-monitor.html
+++ b/src/templates/em-monitor.html
@@ -45,13 +45,13 @@
 			@@include( "components/spacers/templates/template.html", {
 				variant: "parchment"
 			} )
-			<tr>
+			<tr class="bg parchment">
 				<td align="center">
 					<!--
 						Module: One Column Contents
 						Variant: parchment, sapphire buttons
 					-->
-					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module parchment">
+					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module">
 						<tr>
 							<td class="frame"></td>
 							<td class="content">
@@ -106,13 +106,13 @@
 			@@include( "components/spacers/templates/template.html", {
 				variant: "clarity"
 			} )
-			<tr>
+			<tr class="bg clarity">
 				<td align="center">
 					<!--
 						Module: CTA Banner, One Column
 						Variant: clarity, sapphire buttons
 					-->
-					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module cta-banner clarity">
+					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module cta-banner">
 						<tr>
 							<td class="frame"></td>
 							<td class="content">
