--- a/src/templates/engage-lazard.html
+++ b/src/templates/engage-lazard.html
@@ -29,13 +29,13 @@
 			@@include( "components/spacers/templates/template.html", {
 				variant: "parchment"
 			} )
-			<tr>
+			<tr class="bg parchment">
 				<td align="center">
 					<!--
 						Module: CTA Banner, Two Column
 						Variant: clarity, sapphire buttons
 					-->
-					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module cta-banner parchment">
+					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module cta-banner">
 						<tr>
 							<td class="frame"></td>
 							<td class="content h-flush">
@@ -83,13 +83,13 @@
 			@@include( "components/spacers/templates/template.html", {
 				variant: "sapphire"
 			} )
-			<tr>
+			<tr class="bg sapphire">
 				<td align="center">
 					<!--
 						Module: CTA Banner, Two Column
 						Variant: sapphire, sapphire buttons, dark background
 					-->
-					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module dark cta-banner sapphire">
+					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module dark cta-banner">
 						<tr>
 							<td class="frame"></td>
 							<td class="content h-flush">
@@ -128,13 +128,13 @@
 			</tr>
 
 			<!-- Two Column Content - Strategy Card -->
-			<tr>
+			<tr class="bg sapphire">
 				<td align="center">
 					<!--
 						Module: Two Column Contents, Strategy Card
 						Variant: sapphire dark
 					-->
-					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module sapphire dark">
+					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module dark">
 						<tr>
 							<td class="frame"></td>
 							<td class="content">
@@ -174,13 +174,13 @@
 			@@include( "components/spacers/templates/template.html", {
 				variant: "clarity"
 			} )
-			<tr>
+			<tr class="bg clarity">
 				<td align="center">
 					<!--
 						Module: Two Column Contents, Full Content
 						Variant: clarity
 					-->
-					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module clarity">
+					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module">
 						<tr>
 							<td class="frame"></td>
 							<td class="content h-flush">
@@ -412,13 +412,13 @@
 			</tr>
 			
 			<!-- CTA Banner (2) -->
-			<tr>
+			<tr class="bg clarity">
 				<td align="center">
 					<!--
 						Module: CTA Banner, Two Column
 						Variant: clarity, sapphire buttons
 					-->
-					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module cta-banner clarity">
+					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module cta-banner">
 						<tr>
 							<td class="frame"></td>
 							<td class="content h-flush">
@@ -457,13 +457,13 @@
 			</tr>
 
 			<!-- Thumbnail Table -->
-			<tr>
+			<tr class="bg clarity">
 				<td align="center">
 					<!--
 						Module: Thumbnail Table
 						Variant: clarity
 					-->
-					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module clarity">
+					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module">
 						<tr class="bordered">
 							<td class="frame"></td>
 							<td class="content">
@@ -496,13 +496,13 @@
 			@@include( "components/spacers/templates/template.html", {
 				variant: "parchment"
 			} )
-			<tr>
+			<tr class="bg parchment">
 				<td align="center">
 					<!--
 						Module: CTA Banner, Two Column
 						Variant: parchment, sapphire buttons
 					-->
-					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module cta-banner parchment">
+					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module cta-banner">
 						<tr>
 							<td class="frame"></td>
 							<td class="content h-flush">
@@ -546,13 +546,13 @@
 			</tr>
 
 			<!-- One Column Contents - Shift Right -->
-			<tr>
+			<tr class="bg parchment">
 				<td align="center">
 					<!--
 						Module: One Column Content, Shift Right
 						Variant: parchment, sapphire buttons
 					-->
-					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module parchment">
+					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module">
 						<tr>
 							<td class="frame"></td>
 							<td class="content h-flush">
@@ -577,13 +577,13 @@
 			} )
 
 			<!-- One Column Contents - Graph -->
-			<tr>
+			<tr class="bg parchment">
 				<td align="center">
 					<!--
 						Module: One Column Contents
 						Variant: parchment, sapphire buttons
 					-->
-					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module parchment">
+					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module">
 						<tr>
 							<td class="frame"></td>
 							<td class="content">
@@ -614,13 +614,13 @@
 			@@include( "components/spacers/templates/template.html", {
 				variant: "sapphire"
 			} )
-			<tr>
+			<tr class="bg sapphire">
 				<td align="center">
 					<!--
 						Module: CTA Banner, Two Column
 						Variant: sapphire, sapphire buttons, dark background
 					-->
-					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module dark cta-banner sapphire">
+					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module dark cta-banner">
 						<tr>
 							<td class="frame"></td>
 							<td class="content h-flush">
