--- a/src/templates/factor-report.html
+++ b/src/templates/factor-report.html
@@ -74,13 +74,13 @@
 			<!-- END CTA Banner (1) -->
 
 			<!-- Table, Thumbnail -->
-			<tr>
+			<tr class="bg clarity">
 				<td align="center">
 					<!--
 						Module: Thumbnail Table
 						Variant: clarity
 					-->
-					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module clarity">
+					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module">
 						<tr class="bordered">
 							<td class="frame"></td>
 							<td class="content">
