--- a/src/templates/fixed-income-viewpoint.html
+++ b/src/templates/fixed-income-viewpoint.html
@@ -43,13 +43,13 @@
 			@@include( "components/spacers/templates/template.html", {
 				variant: "parchment"
 			} )
-			<tr>
+			<tr class="bg parchment">
 				<td align="center">
 					<!--
 						Module: Email Heading
 						Variant: parchment, onyx buttons
 					-->
-					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module cta-banner parchment">
+					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module cta-banner">
 						<tr>
 							<td class="frame"></td>
 							<td class="content h-flush">
@@ -92,13 +92,13 @@
 			<!-- END Email Heading -->
 
 			<!-- Two Column Content -->
-			<tr>
+			<tr class="bg parchment">
 				<td align="center">
 					<!--
 						Module: Two Column Contents, Title Left
 						Variant: parchment, sapphire buttons
 					-->
-					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module parchment">
+					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module">
 						<tr>
 							<td class="frame"></td>
 							<td class="content h-flush">
@@ -128,13 +128,13 @@
 			@@include( "components/spacers/templates/template.html", {
 				variant: "sage"
 			} )
-			<tr>
+			<tr class="bg sage">
 				<td align="center">
 					<!--
 						Module: CTA Banner, Two Column
 						Variant: sage, onyx buttons
 					-->
-					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module cta-banner sage">
+					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module cta-banner">
 						<tr>
 							<td class="frame"></td>
 							<td class="content h-flush">
