--- a/src/templates/factor-report.html
+++ b/src/templates/factor-report.html
@@ -4,6 +4,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1">
+		<meta name="format-detection" content="telephone=no">
 		<title></title>
 		<link rel="stylesheet" type="text/css" href="../index.css">
 
