--- a/src/templates/em-monitor.html
+++ b/src/templates/em-monitor.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1">
-		<meta name="format-detection" content="telephone=no">
+		<meta name="format-detection" content="telephone=no, date=no, address=no, email=no, url=no">
 		<title></title>
 		<link rel="stylesheet" type="text/css" href="../index.css">
 
