--- a/src/modules/footer-disclaimer/two-column/templates/template.html
+++ b/src/modules/footer-disclaimer/two-column/templates/template.html
@@ -19,7 +19,7 @@
 									<img src="@@imgBase/yt_icon.png" alt="YouTube" width="16px" height="16px">
 								</a> -->
 							</td>
-							<td class="column">
+							<td class="column appleLinks">
 								<p class="disclaimer margin-b-16">Lazard Asset Management, &zwj;30 Rockefeller Plaza, New York, NY 10112-6300</p>
 								
 								<p class="disclaimer">For more information on Lazard Asset Management's capabilities,</p>
@@ -31,7 +31,7 @@
 								<p class="disclaimer margin-b-16">FOR FINANCIAL PROFESSIONAL USE ONLY. NOT FOR PUBLIC DISTRIBUTION.</p>
 								
 								<table style="width: 100%;" cellpadding="0" cellspacing="0" role="presentation">
-									<tr class="layout_two-column">
+									<tr class="layout_two-column appleLinks">
 										<td style="padding-left: 0px !important;" class="column padded">
 											<p class="disclaimer">Information and opinions presented have been obtained or derived from sources believed by Lazard to be reliable. Lazard makes no representation as to their accuracy or completeness. All opinions expressed herein are subject to change. The S&P 500 Index is a market capitalization-weighted index of 500 companies in leading industries of the US economy. The MSCI Emerging Markets Index is a free-float-adjusted market capitalization index that is designed to measure equity market performance in the global emerging markets. The MSCI Emerging Markets Index consists of emerging markets country indices including: Brazil, Chile, China, Colombia, Czech Republic, Egypt, Greece, Hungary, India, Indonesia, Korea, Malaysia, Mexico, Peru, Philippines, Poland, Qatar, Saudi Arabia, South Africa, Taiwan, Thailand, Turkey, and United Arab Emirates. The index is unmanaged and has no fees. One cannot invest directly in an index. The MSCI World Index is a free-float-adjusted market capitalization index that is designed to measure global developed market equity performance comprised of developed market country indices. </p>
 										</td>
