--- a/src/templates/test.html
+++ b/src/templates/test.html
@@ -11,23 +11,23 @@
 	<body align="center">
 		<table style align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" class="wrapper w-100">
 
-			<tr>
-				<td align="center">
-					@@include( "modules/email-banner/two-column/templates/template.html", {
-						variant: "clarity",
-						imgSrc: "LAM_Feature_Lake.png"
-					} )
-				</td>
-			</tr>
-			
-			<tr>
-				<td align="center">
-					@@include( "modules/email-banner/two-column/templates/template.dark.html", {
-						variant: "sapphire",
-						imgSrc: "LAM_Feature_Lake.png"
-					} )
-				</td>
-			</tr>
+			@@include( "modules/email-banner/two-column/templates/template.html", {
+				variant: "clarity",
+				imgSrc: "LAM_Feature_Lake.png"
+			} )
+
+			@@include( "modules/email-banner/two-column/templates/template.dark.html", {
+				variant: "sapphire",
+				imgSrc: "LAM_Feature_Lake.png"
+			} )
+
+			@@include( "modules/footer-disclaimer/one-column/templates/template.html", {
+				variant: "onyx"
+			} )
+
+			@@include( "modules/footer-disclaimer/two-column/templates/template.html", {
+				variant: "onyx"
+			} )
 
 		</table>
 	</body>
