--- a/src/templates/test.html
+++ b/src/templates/test.html
@@ -47,6 +47,14 @@
 				</td>
 			</tr>
 
+			<tr>
+				<td align="center">
+					@@include( "modules/footer-disclaimer/two-column/templates/template.html", {
+						variant: "onyx"
+					} )
+				</td>
+			</tr>
+
 		</table>
 	</body>
 </html>
