Fixed link size for ios

--- a/src/modules/footer-disclaimer/two-column/templates/template.html
+++ b/src/modules/footer-disclaimer/two-column/templates/template.html
@@ -9,7 +9,7 @@
 			<table style="width: 100%;" cellpadding="0" cellspacing="0" role="presentation">
 				<tr class="layout_mobile-one-column">
 					<td style="width: 54px;" class="column nowrap">
-						<a target="_blank" href="https://{{my.Footer LinkedIn URL}}" style="text-decoration: none;">
+						<a target="_blank" href="https://{{my.Footer LinkedIn URL}}" style="text-decoration: none; padding-bottom: 16px;">
 							<img src="@@imgBase/linkedin_icon.png" alt="LinkedIn" width="16px" height="16px">
 						</a>
 						<!-- &nbsp;&nbsp;
