Fixed margin below footer image

--- a/src/modules/footer-disclaimer/one-column/templates/template.html
+++ b/src/modules/footer-disclaimer/one-column/templates/template.html
@@ -8,7 +8,7 @@
 		<td class="content h-flush">
 			<table style="width: 100%;" cellpadding="8px" cellspacing="0" role="presentation">
 				<tr class="layout_mobile-one-column">
-					<td style="width: 54px;" class="column nowrap">
+					<td style="width: 54px;" class="column nowrap margin-b-16">
 						<a target="_blank" href="https://{{my.Footer LinkedIn URL}}" style="text-decoration: none;">
 							<img src="@@imgBase/linkedin_icon.png" alt="LinkedIn" width="16px" height="16px">
 						</a>
