--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -39,6 +39,10 @@
 /* ---------- END Colors ---------- */
 
 /* ---------- Boilerplate ---------- */
+body {
+	margin: 0;
+}
+
 table {
 	border-collapse: collapse !important;
 }
