--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -55,7 +55,7 @@ ul {
 	margin: 0;
 	padding: 0;
 	margin-left: 18px;
-	line-height: 160%;
+	line-height: 1.2;
 	font-weight: normal;
 	font-size: 12px;
 }
@@ -63,7 +63,7 @@ ul {
 li {
 	font-family: "Helvetica Neue LT Std", Helvetica, sans-serif;
 	font-size: 12;
-	line-height: 19px;
+	line-height: 1.2;
 	margin-bottom: 8px;
 	padding-left: 0px;
 	margin-left: 4px;
@@ -99,7 +99,7 @@ u + .body .g_list { margin-left: 0 !important; }
 
 .list-item {
 	vertical-align: middle;
-	line-height: 24px;
+	line-height: 1.2;
 }
 
 .list-item .bullet {
@@ -139,17 +139,17 @@ h1, h2, h3, h4 {
 
 h1 {
 	font-size: 40px;
-	line-height: 40px;
+	line-height: 1.2;
 }
 
 h2 {
 	font-size: 32px;
-	line-height: 38px;
+	line-height: 1.2;
 }
 
 h3 {
 	font-size: 24px;
-	line-height: 29px;
+	line-height: 1.2;
 	font-style: normal;
 }
 
@@ -158,7 +158,7 @@ h4 {
 	font-size: 12px;
 	font-weight: normal;
 	font-style: normal;
-	line-height: 12px;
+	line-height: 1.2;
 }
 
 h1.sans, h2.sans, h3.sans, h4.sans {
@@ -168,17 +168,17 @@ h1.sans, h2.sans, h3.sans, h4.sans {
 
 h1.sans {
 	font-size: 40px;
-	line-height: 40px;
+	line-height: 1.2;
 }
 
 h2.sans {
 	font-size: 32px;
-	line-height: 38px;
+	line-height: 1.2;
 }
 
 h3.sans {
 	font-size: 24px;
-	line-height: 29px;
+	line-height: 1.2;
 	font-style: normal;
 }
 
@@ -187,25 +187,25 @@ h4.sans {
 	font-size: 16px;
 	font-weight: bold;
 	font-style: normal;
-	line-height: 19px;
+	line-height: 1.2;
 }
 
 .subheadline {
 	font-family: "Helvetica Neue LT Std", Helvetica, sans-serif;
 	font-weight: bold;
 	font-size: 24px;
-	line-height: 22px;
+	line-height: 1.2;
 }
 
 h2.subheadline {
 	font-size: 16px;
 	font-weight: normal;
-	line-height: 19px;
+	line-height: 1.2;
 }
 
 h3.subheadline {
 	font-size: 12px;
-	line-height: 14px;
+	line-height: 1.2;
 	font-weight: bold;
 }
 
@@ -214,25 +214,25 @@ p, .paragraph {
 	font-family: "Helvetica Neue LT Std", Helvetica, sans-serif;
 	font-size: 14px;
 	font-weight: normal;
-	line-height: 17px;
+	line-height: 1.2;
 	margin: 0;
 }
 
 .paragraph-2 {
 	font-size: 12px;
-	line-height: 17px;
+	line-height: 1.2;
 }
 
 .paragraph-3 {
 	font-size: 10px;
-	line-height: 12px;
+	line-height: 1.2;
 }
 
 a {
 	font-family: "Helvetica Neue LT Std", Helvetica, sans-serif;
 	font-size: 16px;
 	font-weight: normal;
-	line-height: 19px;
+	line-height: 1.2;
 	text-decoration: underline;
 }
 
@@ -261,13 +261,13 @@ a, a:visited, a:link, a:focus
 
 .link-2 {
 	font-size: 12px;
-	line-height: 19px;
+	line-height: 1.2;
 	color: var(--sapphire);
 }
 
 .disclaimer, .caption, .disclaimer a, .caption a {
 	font-size: 9px;
-	line-height: 11px;
+	line-height: 1.2;
 }
 
 .nowrap {
@@ -411,11 +411,11 @@ a, a:visited, a:link, a:focus
 	color: var(--parchment);
 	text-align: center;
 	-webkit-text-size-adjust: none;
-	line-height: 32px;
+	line-height: 1.2;
 }
 
 .btn.pill.small {
-	line-height: 22px;
+	line-height: 1.2;
 }
 
 .btn.pill span {
@@ -486,7 +486,7 @@ a, a:visited, a:link, a:focus
 
 .btn.text {
 	font-size: 12px;
-	line-height: 16px;
+	line-height: 1.2;
 	font-weight: bold;
 	color: var(--onyx);
 	text-decoration: none;
